--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs",
     "target": "ES2019",
     "outDir": "out",
-    "noImplicitOverride": true,
+    "noImplicitOverride": e
+    
     "noImplicitReturns": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
